kubernetes/cnfe-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: cnfe-app
spec: {}
status: {}
