kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: cnfe-app
  labels:
    app: backend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  strategy: {}
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      containers:
      - image: cics89/jsonserver:latest
        name: backend
        ports:
        - containerPort: 80
        resources: {}
status: {}
