kubernetes/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cnfe-app
  labels:
    app: frontend
    version: v1
spec:
  ports: 
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  - port: 9000
    name: metrics
    protocol: TCP
    targetPort: 9000
  selector:
    app: frontend
status:
  loadBalancer: {}
...
