kubernetes/cnfe-httpproxy.yaml
# httpproxy frontend
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: frontend
  namespace: cnfe-app
spec:
  virtualhost:
    fqdn: myapp.kubehirsh.com
  routes:
    - conditions:
      - prefix: /
      services:
        - name: frontend
          port: 80
